deps/v8/test/message/fail/weak-refs-finalizationregistry1.out
*%(basename)s:*: TypeError: FinalizationRegistry: cleanup must be callable
let fg = new FinalizationRegistry();
         ^
TypeError: FinalizationRegistry: cleanup must be callable
    at new FinalizationRegistry (<anonymous>)
    at *%(basename)s:*:10
